# welness-ai-backend

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  pyrightconfig.json
apps/: db.sqlite3
apps/activities/: forms.py  models.py  services.py  urls.py  views.py
apps/activities/migrations/: 0001_initial.py  0002_exercise_activityexercise.py  0003_activityexercise_details.py  0004_remove_activityexercise_distance_km_and_more.py  0005_alter_activity_options_remove_activity_date_and_more.py  0006_activity_recurrence_days_and_more.py
apps/agents/: models.py  services.py  tools.py  urls.py  views.py
apps/agents/management/: __init__.py
apps/agents/migrations/: 0001_initial.py  0002_agent_config.py
apps/apps/: settings.py  urls.py  views.py
apps/bots/: admin.py  apps.py  base_bot_controller.py  bot_agent.py  models.py
apps/bots/migrations/: 0001_initial.py  0002_usercontext_provider.py  0003_remove_usercontext_provider.py  0004_alter_bot_provider.py
apps/goals/: admin.py  models.py  urls.py
apps/meals/: README.md  admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/metrics/: admin.py  apps.py  demo.py  forms.py  models.py  services.py  simple_demo.py  tests.py  urls.py  views.py
apps/planner/: api.py  apps.py  urls.py  views.py
apps/templates/: base.html  dashboard.html  home.html  profile.html
apps/user_auth/: README.md  admin.py  apps.py  bot_integration_example.py  models.py  serializers.py  services.py  signals.py  telegram_auth.py  urls.py  views.py
postgres/: Dockerfile
(+52 files in other folders)
